# hola-boss-oss

./: .gitignore  INSTALL.md  README.md  package.json
runtime/: pyproject.toml
runtime/api-server/: package-lock.json  package.json  tsup.config.ts
runtime/api-server/src/: agent-capability-registry.test.ts  agent-capability-registry.ts  agent-prompt-sections.ts  agent-runtime-config.test.ts  agent-runtime-config.ts  agent-runtime-prompt.test.ts  agent-runtime-prompt.ts  app-lifecycle-worker.test.ts  app-lifecycle-worker.ts  app.test.ts  app.ts  apply-app-triggers.ts  background-task-model.ts  bridge-worker.test.ts  bridge-worker.ts  claimed-input-executor.test.ts  claimed-input-executor.ts  composio-minimal-example.test.ts  composio-minimal-example.ts  composio-service.test.ts  composio-service.ts  cron-worker.test.ts  cron-worker.ts  data-schema-triggers.ts  desktop-browser-tools.test.ts  desktop-browser-tools.ts  evolve-skill-review.ts  evolve-tasks.ts  evolve.test.ts  evolve.ts  harness-conformance.test.ts  harness-registry.test.ts  harness-registry.ts  hb.test.ts  hb.ts  image-generation-model.test.ts  (+96 more)
runtime/deploy/: Dockerfile.toolchain  build_runtime_root.mjs  build_runtime_root.sh  package_linux_runtime.sh  package_macos_runtime.sh  package_runtime_node_bundle.test.mjs  package_windows_runtime.mjs  prune_packaged_tree.mjs  prune_packaged_tree.sh  stage_python_runtime.mjs  stage_python_runtime.test.mjs
runtime/harness-host/: package-lock.json  package.json
runtime/harnesses/: package-lock.json  package.json
runtime/state-store/: package-lock.json
(+513 files in other folders)
