[project]
name = "holaboss-sandbox-agent-runtime"
version = "0.1.0"
description = "Holaboss runtime package and dependency manifest."
requires-python = ">=3.12,<3.13"
dependencies = [
    "croniter",
    "fastapi[standard]>=0.115.12",
    "httpx[socks]>=0.28.1",
    "mcp>=1.6.0",
    "openai==2.11.0",
    "opencode-ai>=0.1.0a36",
    "pydantic>=2.9.2,<2.13",
    "PyYAML>=6.0",
    "sqlalchemy>=2.0,<3",
]

[project.scripts]
hb = "sandbox_agent_runtime.hb_cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-asyncio>=0.26,<1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
